fix: footer responsive grid (3 cols on mobile) and redirection properly

--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -3,6 +3,8 @@
   position: fixed;
   top: 0;
   z-index: 1000;
+  left:0;
+  width:100%;
 }
 
 .navbar-title {
